[package]
name = "pwdchk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6.2"
color-print = "0.3.5"
colour = "0.7.0"
eyre = "0.6.8"
indicatif = "0.17.7"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
sha1 = "0.10.6"
